Add subscribe success/fail message

--- a/vyne-query-service/src/main/web/src/app/taxi-playground/subscribe-dialog/subscribe-dialog.component.html
+++ b/vyne-query-service/src/main/web/src/app/taxi-playground/subscribe-dialog/subscribe-dialog.component.html
@@ -1,26 +1,54 @@
-<form [formGroup]="subscribeForm" (ngSubmit)="onSubmit(subscribeForm.value)">
-    <h3>Want to hear from us about cool stuff?</h3>
-    <tui-input tuiAutoFocus formControlName="email">
-        Your email
-    </tui-input>
-    <p class="dialog-text">
-        If you'd be so kind as to provide your email, we'll be able to communicate with you about this tool. You know, like when we release new features or very occasionally ask for some feedback on it which is super important for us.
-        <br /><br />
-        Anyway, blah blah legal stuff blah, if you're ok with this it kinda goes without saying clicking Subscribe below means you agree to us emailing you and processing your personal information (how else are we supposed to remember your email?).
+<div *ngIf="subscribed == false; then step1; else step2"></div>
 
-        <tui-checkbox-labeled
-            formControlName="otherCommsCheckbox"
-            size="l"
-            class="tui-space_vertical-4">
+<ng-template #step1>
+    <form [formGroup]="subscribeForm" (ngSubmit)="onSubmit(subscribeForm.value)">
+        <h3>Want to hear from us about cool stuff?</h3>
+        <tui-input tuiAutoFocus formControlName="email">
+            Your email
+        </tui-input>
+        <p class="dialog-text">
+            If you'd be so kind as to provide your email, we'll be able to communicate with you about this tool. You
+            know, like when we release new features or very occasionally ask for some feedback on it which is super
+            important for us.
+            <br /><br />
+            Anyway, blah blah legal stuff blah, if you're ok with this it kinda goes without saying clicking Subscribe
+            below means you agree to us emailing you and processing your personal information (how else are we supposed
+            to remember your email?).
 
-            <span class="dialog-text">Check this to also hear about our other products, like Orbital, our automated integration platform.</span>
-        </tui-checkbox-labeled>
-        
-        Oh, and if you get sick of us, don't worry you'll be able to unsubscribe later.
-    </p>
-    <p>
-        <button tuiButton type="submit">
-            Subscribe
+            <tui-checkbox-labeled formControlName="otherCommsCheckbox" size="l" class="tui-space_vertical-4">
+
+                <span class="dialog-text">Check this to also hear about our other products, like Orbital, our automated
+                    integration platform.</span>
+            </tui-checkbox-labeled>
+
+            Oh, and if you get sick of us, don't worry you'll be able to unsubscribe later.
+        </p>
+        <p>
+            <button tuiButton type="submit">
+                Subscribe
+            </button>
+        </p>
+    </form>
+</ng-template>
+
+<ng-template #step2>
+    <div *ngIf="subscribeSuccess(); then success; else fail"></div>
+    <ng-template #success>
+        <p>Thanks muchly! We'll be in touch soon...</p>
+        <p>...but not too soon. It'll be just the right amount of time where we won't seem too keen, but you won't have
+            forgotten about us.</p>
+        <br />
+        <button tuiButton (click)="closeDialog()">
+            I'm done here
         </button>
-    </p>
-</form>
+    </ng-template>
+
+    <ng-template #fail>
+        <p>Well this is embarrassing, it looks like something's gone wrong.</p>
+        <p>Please jump over to our Slack and we'll sort it out.</p>
+        <br />
+        <button tuiButton (click)="closeDialog()">
+            Close
+        </button>
+    </ng-template>
+</ng-template>
