Update github repo link

--- a/vyne-query-service/src/main/web/src/app/taxi-playground/toolbar/playground-toolbar.component.html
+++ b/vyne-query-service/src/main/web/src/app/taxi-playground/toolbar/playground-toolbar.component.html
@@ -28,7 +28,7 @@
   </a>
 </button>
 <button class="header-icon-button">
-  <a target="_blank" href="https://github.com/orbitalapi/orbital">
+  <a target="_blank" href="https://github.com/vyneco/voyager">
     <mat-icon svgIcon="brandGitHub"></mat-icon>
   </a>
 </button>
