--- a/vyne-query-service/src/main/web/src/app/taxi-playground/toolbar/playground-toolbar.component.scss
+++ b/vyne-query-service/src/main/web/src/app/taxi-playground/toolbar/playground-toolbar.component.scss
@@ -21,6 +21,12 @@
   }
 }
 
+.nav-link {
+  --tui-link: white;
+  --tui-link-hover: white;
+  margin-right: 10px;
+}
+
 .spacer {
   flex-grow: 1;
 }
