--- a/vyne-query-service/src/main/web/src/app/taxi-playground/subscribe-dialog/subscribe-dialog.component.html
+++ b/vyne-query-service/src/main/web/src/app/taxi-playground/subscribe-dialog/subscribe-dialog.component.html
@@ -32,23 +32,30 @@
 </ng-template>
 
 <ng-template #step2>
-    <div *ngIf="subscribeSuccess(); then success; else fail"></div>
-    <ng-template #success>
-        <p>Thanks muchly! We'll be in touch soon...</p>
-        <p>...but not too soon. It'll be just the right amount of time where we won't seem too keen, but you won't have
-            forgotten about us.</p>
-        <br />
-        <button tuiButton (click)="closeDialog()">
-            I'm done here
-        </button>
-    </ng-template>
-
-    <ng-template #fail>
-        <p>Well this is embarrassing, it looks like something's gone wrong.</p>
-        <p>Please jump over to our Slack and we'll sort it out.</p>
-        <br />
-        <button tuiButton (click)="closeDialog()">
-            Close
-        </button>
-    </ng-template>
+    <div [ngSwitch]="subscriptionResult">
+        <ng-container *ngSwitchCase="'SUCCESS'">
+            <p>Thanks muchly! We'll be in touch soon...</p>
+            <p>...but not too soon. It'll be just the right amount of time where we won't seem too keen, but you won't
+                have
+                forgotten about us.</p>
+            <br />
+            <button tuiButton (click)="closeDialog()">
+                I'm done here
+            </button>
+        </ng-container>
+        <ng-container *ngSwitchCase="'ALREADY_SUBSCRIBED'">
+            <p>Unless we're mistaken, it looks like you're already subscribed!</p>
+            <button tuiButton (click)="closeDialog()">
+                Ok
+            </button>
+        </ng-container>
+        <ng-container *ngSwitchCase="'FAILED'">
+            <p>Well this is embarrassing, it looks like something's gone wrong.</p>
+            <p>Please jump over to our Slack and we'll sort it out.</p>
+            <br />
+            <button tuiButton (click)="closeDialog()">
+                Close
+            </button>
+        </ng-container>
+    </div>
 </ng-template>
