--- a/vyne-query-service/src/main/web/src/app/orbital-shell/orbital-shell.component.html
+++ b/vyne-query-service/src/main/web/src/app/orbital-shell/orbital-shell.component.html
@@ -1,350 +1,27 @@
-<!--
-  This example requires some changes to your config:
-
-  ```
-  // tailwind.config.js
-  module.exports = {
-    // ...
-    plugins: [
-      // ...
-      require('@tailwindcss/forms'),
-    ],
-  }
-  ```
--->
-<!--
-  This example requires updating your template:
-
-  ```
-  <html class="h-full bg-gray-100">
-  <body class="h-full overflow-hidden">
-  ```
--->
 <div class="flex h-full flex-col">
   <!-- Top nav-->
   <header class="relative flex h-16 flex-shrink-0 items-center bg-white">
     <!-- Logo area -->
     <div class="absolute inset-y-0 left-0 md:static md:flex-shrink-0">
       <a href="#"
-         class="flex h-16 w-16 items-center justify-center bg-indigo-500 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-600 md:w-20">
+         class="flex h-16 w-28 items-center justify-center bg-midnight focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-600">
         <img class="h-8 w-auto" src="https://tailwindui.com/img/logos/mark.svg?color=white" alt="Your Company">
       </a>
     </div>
 
-    <!-- Picker area -->
-    <div class="mx-auto md:hidden">
-      <div class="relative">
-        <label for="inbox-select" class="sr-only">Choose inbox</label>
-        <select id="inbox-select"
-                class="rounded-md border-0 bg-none pl-3 pr-8 text-base font-medium text-gray-900 focus:ring-2 focus:ring-indigo-600">
-          <option selected>Open</option>
-
-          <option>Archive</option>
-
-          <option>Customers</option>
-
-          <option>Flagged</option>
-
-          <option>Spam</option>
-
-          <option>Drafts</option>
-        </select>
-        <div class="pointer-events-none absolute inset-y-0 right-0 flex items-center justify-center pr-2">
-          <!-- Heroicon name: mini/chevron-down -->
-          <svg class="h-5 w-5 text-gray-500" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"
-               aria-hidden="true">
-            <path fill-rule="evenodd"
-                  d="M5.23 7.21a.75.75 0 011.06.02L10 11.168l3.71-3.938a.75.75 0 111.08 1.04l-4.25 4.5a.75.75 0 01-1.08 0l-4.25-4.5a.75.75 0 01.02-1.06z"
-                  clip-rule="evenodd"/>
-          </svg>
-        </div>
-      </div>
-    </div>
-
-    <!-- Menu button area -->
-    <div class="absolute inset-y-0 right-0 flex items-center pr-4 sm:pr-6 md:hidden">
-      <!-- Mobile menu button -->
-      <button type="button"
-              class="-mr-2 inline-flex items-center justify-center rounded-md p-2 text-gray-400 hover:bg-gray-100 hover:text-gray-500 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-600">
-        <span class="sr-only">Open main menu</span>
-        <!-- Heroicon name: outline/bars-3 -->
-        <svg class="block h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-             stroke="currentColor" aria-hidden="true">
-          <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"/>
-        </svg>
-      </button>
-    </div>
-
     <!-- Desktop nav area -->
-    <div class="hidden md:flex md:min-w-0 md:flex-1 md:items-center md:justify-between">
-      <div class="min-w-0 flex-1">
-        <div class="relative max-w-2xl text-gray-400 focus-within:text-gray-500">
-          <label for="desktop-search" class="sr-only">Search</label>
-          <input id="desktop-search" type="search" placeholder="Search"
-                 class="block w-full border-transparent pl-12 placeholder-gray-500 focus:border-transparent focus:ring-0 sm:text-sm">
-          <div class="pointer-events-none absolute inset-y-0 left-0 flex items-center justify-center pl-4">
-            <!-- Heroicon name: mini/magnifying-glass -->
-            <svg class="h-5 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"
-                 aria-hidden="true">
-              <path fill-rule="evenodd"
-                    d="M9 3.5a5.5 5.5 0 100 11 5.5 5.5 0 000-11zM2 9a7 7 0 1112.452 4.391l3.328 3.329a.75.75 0 11-1.06 1.06l-3.329-3.328A7 7 0 012 9z"
-                    clip-rule="evenodd"/>
-            </svg>
-          </div>
-        </div>
-      </div>
-      <div class="ml-10 flex flex-shrink-0 items-center space-x-10 pr-4">
-        <nav aria-label="Global" class="flex space-x-10">
-          <a href="#" class="text-sm font-medium text-gray-900">Inboxes</a>
-          <a href="#" class="text-sm font-medium text-gray-900">Reporting</a>
-          <a href="#" class="text-sm font-medium text-gray-900">Settings</a>
-        </nav>
-        <div class="flex items-center space-x-8">
-          <span class="inline-flex">
-            <a href="#" class="-mx-1 rounded-full bg-white p-1 text-gray-400 hover:text-gray-500">
-              <span class="sr-only">View notifications</span>
-              <!-- Heroicon name: outline/bell -->
-              <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                   stroke="currentColor" aria-hidden="true">
-                <path stroke-linecap="round" stroke-linejoin="round"
-                      d="M14.857 17.082a23.848 23.848 0 005.454-1.31A8.967 8.967 0 0118 9.75v-.7V9A6 6 0 006 9v.75a8.967 8.967 0 01-2.312 6.022c1.733.64 3.56 1.085 5.455 1.31m5.714 0a24.255 24.255 0 01-5.714 0m5.714 0a3 3 0 11-5.714 0"/>
-              </svg>
-            </a>
-          </span>
+    <app-navbar class="md:flex md:min-w-0 md:flex-1 md:items-center md:justify-between"></app-navbar>
 
-          <div class="relative inline-block text-left">
-            <button type="button"
-                    class="flex rounded-full bg-white text-sm focus:outline-none focus:ring-2 focus:ring-indigo-600 focus:ring-offset-2"
-                    id="menu-0-button" aria-expanded="false" aria-haspopup="true">
-              <span class="sr-only">Open user menu</span>
-              <img class="h-8 w-8 rounded-full"
-                   src="https://images.unsplash.com/photo-1517365830460-955ce3ccd263?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80"
-                   alt="">
-            </button>
-
-            <!--
-              Dropdown menu, show/hide based on menu state.
-
-              Entering: "transition ease-out duration-100"
-                From: "transform opacity-0 scale-95"
-                To: "transform opacity-100 scale-100"
-              Leaving: "transition ease-in duration-75"
-                From: "transform opacity-100 scale-100"
-                To: "transform opacity-0 scale-95"
-            -->
-            <div
-              class="absolute right-0 z-10 mt-2 w-56 origin-top-right rounded-md bg-white shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none"
-              role="menu" aria-orientation="vertical" aria-labelledby="menu-0-button" tabindex="-1">
-              <div class="py-1" role="none">
-                <!-- Active: "bg-gray-100", Not Active: "" -->
-                <a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1"
-                   id="menu-0-item-0">Your Profile</a>
-                <a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1"
-                   id="menu-0-item-1">Sign Out</a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Mobile menu, show/hide this `div` based on menu open/closed state -->
-
-    <div class="relative z-40 md:hidden" role="dialog" aria-modal="true">
-      <!--
-        Off-canvas menu backdrop, show/hide based on off-canvas menu state.
-
-        Entering: "transition-opacity ease-linear duration-300"
-          From: "opacity-0"
-          To: "opacity-100"
-        Leaving: "transition-opacity ease-linear duration-300"
-          From: "opacity-100"
-          To: "opacity-0"
-      -->
-      <div class="hidden sm:fixed sm:inset-0 sm:block sm:bg-gray-600 sm:bg-opacity-75"></div>
-
-      <div class="fixed inset-0 z-40">
-        <!--
-          Mobile menu, toggle classes based on menu state.
-
-          Entering: "transition ease-out duration-150 sm:ease-in-out sm:duration-300"
-            From: "transform opacity-0 scale-110 sm:translate-x-full sm:scale-100 sm:opacity-100"
-            To: "transform opacity-100 scale-100  sm:translate-x-0 sm:scale-100 sm:opacity-100"
-          Leaving: "transition ease-in duration-150 sm:ease-in-out sm:duration-300"
-            From: "transform opacity-100 scale-100 sm:translate-x-0 sm:scale-100 sm:opacity-100"
-            To: "transform opacity-0 scale-110  sm:translate-x-full sm:scale-100 sm:opacity-100"
-        -->
-        <div
-          class="fixed inset-0 z-40 h-full w-full bg-white sm:inset-y-0 sm:left-auto sm:right-0 sm:w-full sm:max-w-sm sm:shadow-lg"
-          aria-label="Global">
-          <div class="flex h-16 items-center justify-between px-4 sm:px-6">
-            <a href="#">
-              <img class="block h-8 w-auto" src="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=500"
-                   alt="Your Company">
-            </a>
-            <button type="button"
-                    class="-mr-2 inline-flex items-center justify-center rounded-md p-2 text-gray-400 hover:bg-gray-100 hover:text-gray-500 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-600">
-              <span class="sr-only">Close main menu</span>
-              <!-- Heroicon name: outline/x-mark -->
-              <svg class="block h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-                   stroke-width="1.5" stroke="currentColor" aria-hidden="true">
-                <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12"/>
-              </svg>
-            </button>
-          </div>
-          <div class="max-w-8xl mx-auto mt-2 px-4 sm:px-6">
-            <div class="relative text-gray-400 focus-within:text-gray-500">
-              <label for="mobile-search" class="sr-only">Search all inboxes</label>
-              <input id="mobile-search" type="search" placeholder="Search all inboxes"
-                     class="block w-full rounded-md border-gray-300 pl-10 placeholder-gray-500 focus:border-indigo-600 focus:ring-indigo-600">
-              <div class="absolute inset-y-0 left-0 flex items-center justify-center pl-3">
-                <!-- Heroicon name: mini/magnifying-glass -->
-                <svg class="h-5 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"
-                     aria-hidden="true">
-                  <path fill-rule="evenodd"
-                        d="M9 3.5a5.5 5.5 0 100 11 5.5 5.5 0 000-11zM2 9a7 7 0 1112.452 4.391l3.328 3.329a.75.75 0 11-1.06 1.06l-3.329-3.328A7 7 0 012 9z"
-                        clip-rule="evenodd"/>
-                </svg>
-              </div>
-            </div>
-          </div>
-          <div class="max-w-8xl mx-auto py-3 px-2 sm:px-4">
-            <a href="#"
-               class="block rounded-md py-2 px-3 text-base font-medium text-gray-900 hover:bg-gray-100">Inboxes</a>
-
-            <a href="#" class="block rounded-md py-2 pl-5 pr-3 text-base font-medium text-gray-500 hover:bg-gray-100">Technical
-              Support</a>
-
-            <a href="#" class="block rounded-md py-2 pl-5 pr-3 text-base font-medium text-gray-500 hover:bg-gray-100">Sales</a>
-
-            <a href="#" class="block rounded-md py-2 pl-5 pr-3 text-base font-medium text-gray-500 hover:bg-gray-100">General</a>
-
-            <a href="#" class="block rounded-md py-2 px-3 text-base font-medium text-gray-900 hover:bg-gray-100">Reporting</a>
-
-            <a href="#" class="block rounded-md py-2 px-3 text-base font-medium text-gray-900 hover:bg-gray-100">Settings</a>
-          </div>
-          <div class="border-t border-gray-200 pt-4 pb-3">
-            <div class="max-w-8xl mx-auto flex items-center px-4 sm:px-6">
-              <div class="flex-shrink-0">
-                <img class="h-10 w-10 rounded-full"
-                     src="https://images.unsplash.com/photo-1517365830460-955ce3ccd263?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80"
-                     alt="">
-              </div>
-              <div class="ml-3 min-w-0 flex-1">
-                <div class="truncate text-base font-medium text-gray-800">Whitney Francis</div>
-                <div class="truncate text-sm font-medium text-gray-500">whitney.francis@example.com</div>
-              </div>
-              <a href="#" class="ml-auto flex-shrink-0 bg-white p-2 text-gray-400 hover:text-gray-500">
-                <span class="sr-only">View notifications</span>
-                <!-- Heroicon name: outline/bell -->
-                <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-                     stroke-width="1.5" stroke="currentColor" aria-hidden="true">
-                  <path stroke-linecap="round" stroke-linejoin="round"
-                        d="M14.857 17.082a23.848 23.848 0 005.454-1.31A8.967 8.967 0 0118 9.75v-.7V9A6 6 0 006 9v.75a8.967 8.967 0 01-2.312 6.022c1.733.64 3.56 1.085 5.455 1.31m5.714 0a24.255 24.255 0 01-5.714 0m5.714 0a3 3 0 11-5.714 0"/>
-                </svg>
-              </a>
-            </div>
-            <div class="max-w-8xl mx-auto mt-3 space-y-1 px-2 sm:px-4">
-              <a href="#" class="block rounded-md py-2 px-3 text-base font-medium text-gray-900 hover:bg-gray-50">Your
-                Profile</a>
-
-              <a href="#" class="block rounded-md py-2 px-3 text-base font-medium text-gray-900 hover:bg-gray-50">Sign
-                out</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
   </header>
 
   <!-- Bottom section -->
   <div class="flex min-h-0 flex-1 overflow-hidden">
     <!-- Narrow sidebar-->
-    <nav aria-label="Sidebar" class="hidden md:block md:flex-shrink-0 md:overflow-y-auto md:bg-gray-800">
-      <div class="relative flex w-20 flex-col space-y-3 p-3">
-        <a href="#"
-           class="bg-gray-900 text-white flex-shrink-0 inline-flex items-center justify-center h-14 w-14 rounded-lg">
-          <span class="sr-only">Open</span>
-          <!-- Heroicon name: outline/inbox -->
-          <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-               stroke="currentColor" aria-hidden="true">
-            <path stroke-linecap="round" stroke-linejoin="round"
-                  d="M2.25 13.5h3.86a2.25 2.25 0 012.012 1.244l.256.512a2.25 2.25 0 002.013 1.244h3.218a2.25 2.25 0 002.013-1.244l.256-.512a2.25 2.25 0 012.013-1.244h3.859m-19.5.338V18a2.25 2.25 0 002.25 2.25h15A2.25 2.25 0 0021.75 18v-4.162c0-.224-.034-.447-.1-.661L19.24 5.338a2.25 2.25 0 00-2.15-1.588H6.911a2.25 2.25 0 00-2.15 1.588L2.35 13.177a2.25 2.25 0 00-.1.661z"/>
-          </svg>
-        </a>
-
-        <a href="#"
-           class="text-gray-400 hover:bg-gray-700 flex-shrink-0 inline-flex items-center justify-center h-14 w-14 rounded-lg">
-          <span class="sr-only">Archive</span>
-          <!-- Heroicon name: outline/archive-box -->
-          <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-               stroke="currentColor" aria-hidden="true">
-            <path stroke-linecap="round" stroke-linejoin="round"
-                  d="M20.25 7.5l-.625 10.632a2.25 2.25 0 01-2.247 2.118H6.622a2.25 2.25 0 01-2.247-2.118L3.75 7.5M10 11.25h4M3.375 7.5h17.25c.621 0 1.125-.504 1.125-1.125v-1.5c0-.621-.504-1.125-1.125-1.125H3.375c-.621 0-1.125.504-1.125 1.125v1.5c0 .621.504 1.125 1.125 1.125z"/>
-          </svg>
-        </a>
-
-        <a href="#"
-           class="text-gray-400 hover:bg-gray-700 flex-shrink-0 inline-flex items-center justify-center h-14 w-14 rounded-lg">
-          <span class="sr-only">Customers</span>
-          <!-- Heroicon name: outline/user-circle -->
-          <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-               stroke="currentColor" aria-hidden="true">
-            <path stroke-linecap="round" stroke-linejoin="round"
-                  d="M17.982 18.725A7.488 7.488 0 0012 15.75a7.488 7.488 0 00-5.982 2.975m11.963 0a9 9 0 10-11.963 0m11.963 0A8.966 8.966 0 0112 21a8.966 8.966 0 01-5.982-2.275M15 9.75a3 3 0 11-6 0 3 3 0 016 0z"/>
-          </svg>
-        </a>
-
-        <a href="#"
-           class="text-gray-400 hover:bg-gray-700 flex-shrink-0 inline-flex items-center justify-center h-14 w-14 rounded-lg">
-          <span class="sr-only">Flagged</span>
-          <!-- Heroicon name: outline/flag -->
-          <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-               stroke="currentColor" aria-hidden="true">
-            <path stroke-linecap="round" stroke-linejoin="round"
-                  d="M3 3v1.5M3 21v-6m0 0l2.77-.693a9 9 0 016.208.682l.108.054a9 9 0 006.086.71l3.114-.732a48.524 48.524 0 01-.005-10.499l-3.11.732a9 9 0 01-6.085-.711l-.108-.054a9 9 0 00-6.208-.682L3 4.5M3 15V4.5"/>
-          </svg>
-        </a>
-
-        <a href="#"
-           class="text-gray-400 hover:bg-gray-700 flex-shrink-0 inline-flex items-center justify-center h-14 w-14 rounded-lg">
-          <span class="sr-only">Spam</span>
-          <!-- Heroicon name: outline/no-symbol -->
-          <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-               stroke="currentColor" aria-hidden="true">
-            <path stroke-linecap="round" stroke-linejoin="round"
-                  d="M18.364 18.364A9 9 0 005.636 5.636m12.728 12.728A9 9 0 015.636 5.636m12.728 12.728L5.636 5.636"/>
-          </svg>
-        </a>
-
-        <a href="#"
-           class="text-gray-400 hover:bg-gray-700 flex-shrink-0 inline-flex items-center justify-center h-14 w-14 rounded-lg">
-          <span class="sr-only">Drafts</span>
-          <!-- Heroicon name: outline/pencil-square -->
-          <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-               stroke="currentColor" aria-hidden="true">
-            <path stroke-linecap="round" stroke-linejoin="round"
-                  d="M16.862 4.487l1.687-1.688a1.875 1.875 0 112.652 2.652L10.582 16.07a4.5 4.5 0 01-1.897 1.13L6 18l.8-2.685a4.5 4.5 0 011.13-1.897l8.932-8.931zm0 0L19.5 7.125M18 14v4.75A2.25 2.25 0 0115.75 21H5.25A2.25 2.25 0 013 18.75V8.25A2.25 2.25 0 015.25 6H10"/>
-          </svg>
-        </a>
-      </div>
-    </nav>
+    <app-sidebar></app-sidebar>
 
     <!-- Main area -->
-    <main class="min-w-0 flex-1 border-t border-gray-200 lg:flex">
-      <!-- Primary column -->
-      <section aria-labelledby="primary-heading"
-               class="flex h-full min-w-0 flex-1 flex-col overflow-y-auto lg:order-last">
-        <h1 id="primary-heading" class="sr-only">Home</h1>
-        <!-- Your content -->
-      </section>
-
-      <!-- Secondary column (hidden on smaller screens) -->
-      <aside class="hidden lg:order-first lg:block lg:flex-shrink-0">
-        <div class="relative flex h-full w-96 flex-col overflow-y-auto border-r border-gray-200 bg-gray-100">
-          <!-- Your content -->
-        </div>
-      </aside>
+    <main class="min-w-0 flex-1 border-t border-gray-200 lg:flex mt-8 ml-8 mr-8">
+      <router-outlet></router-outlet>
     </main>
   </div>
 </div>
