--- a/vyne-query-service/src/main/web/src/orbital-app/typography.scss
+++ b/vyne-query-service/src/main/web/src/orbital-app/typography.scss
@@ -12,22 +12,25 @@ $headings-font: var(--body-font);
 h1, .h1 {
   font-family: $headings-font;
   font-weight: 700;
-  //font-size: 4rem;
-  //line-height: 1.3;
+  // based off tailwind text-2xl
+  font-size: 1.5rem; /* 24px */
+  line-height: 2rem; /* 32px */
 }
 
 h2, .h2 {
   font-family: $headings-font;
   font-weight: 500;
-  //font-size: 3rem;
-  //line-height: 1.3;
+  // based off tailwind text-xl
+  font-size: 1.25rem; /* 20px */
+  line-height: 1.75rem; /* 28px */
 }
 
 h3, .h3 {
   font-family: $headings-font;
-  font-weight: 300;
-  //font-size: 2rem;
-  //line-height: 1.3;
+  font-weight: 400;
+  // based off tailwind text-lg
+  font-size: 1.125rem; /* 18px */
+  line-height: 1.75rem; /* 28px */
 }
 
 h4, .h4 {
