feature(ui): add schema explorer to orbital

--- a/vyne-query-service/src/main/web/src/app/changelog/changelog-list.component.scss
+++ b/vyne-query-service/src/main/web/src/app/changelog/changelog-list.component.scss
@@ -3,6 +3,10 @@
 
 .changelog-entry {
   display: flex;
+
+  border-bottom: 1px solid $borer-light;
+  margin-bottom: 1rem;
+  padding-bottom: 1rem;
 }
 
 .changelog-header {
