--- a/vyne-query-service/src/main/web/src/app/schema-explorer/schema-summary-view.component.scss
+++ b/vyne-query-service/src/main/web/src/app/schema-explorer/schema-summary-view.component.scss
@@ -10,3 +10,14 @@ app-package-list {
   margin-right: 2rem;
 }
 
+:host(.orbital) {
+  margin-left: 1rem;
+  padding-top: 1rem;
+  overflow: auto;
+  width: 100%;
+}
+
+app-changelog-list {
+  margin-top: 1rem;
+  display: block;
+}
