--- a/vyne-query-service/src/main/web/src/orbital-theme.scss
+++ b/vyne-query-service/src/main/web/src/orbital-theme.scss
@@ -1,3 +1,10 @@
 @import "src/orbital-app/variables";
 @import "src/orbital-app/typography";
 @import "src/orbital-app/orbital";
+
+.panel-toolbar {
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid $border-light;
+  padding: 1rem;
+}
