--- a/vyne-query-service/src/main/web/src/app/type-editor/type-editor.component.html
+++ b/vyne-query-service/src/main/web/src/app/type-editor/type-editor.component.html
@@ -73,7 +73,7 @@
         <div class="form-element">
           <app-description-editor placeholder="Write something amazing" [editable]="true"
                                   (valueChanged)="typeDocValueChanged.emit($event)"
-                                  [showControlBar]="false"
+                                  [showControlBar]="true"
           ></app-description-editor>
         </div>
       </div>
