--- a/vyne-query-service/src/main/web/src/styles.scss
+++ b/vyne-query-service/src/main/web/src/styles.scss
@@ -86,3 +86,7 @@ $vyne-app-theme: mat.define-light-theme($vyne-app-primary, $vyne-app-accent, $vy
 .mat-tab-link {
   font-family: $headings-font;
 }
+
+tui-dialog-host {
+  z-index: 10000;
+}
