Add the edit text and push the changeset selection to some more views.

--- a/vyne-query-service/src/main/web/src/app/type-list/type-list.component.html
+++ b/vyne-query-service/src/main/web/src/app/type-list/type-list.component.html
@@ -1,4 +1,5 @@
 <app-header-bar title="Data Catalog">
+  <app-changeset-selector></app-changeset-selector>
 </app-header-bar>
 <app-filter-types (filterChanged)="updateFilter($event)"></app-filter-types>
 <div class="cdk-viewport-container container">
