--- a/vyne-query-service/src/main/web/src/app/type-viewer/type-viewer.component.scss
+++ b/vyne-query-service/src/main/web/src/app/type-viewer/type-viewer.component.scss
@@ -10,8 +10,8 @@
   }
 }
 
-app-schema-diagram {
-  height: 400px;
+app-schema-diagram, app-service-lineage-graph-container {
+  height: 600px;
 }
 
 .types-row {
