--- a/vyne-query-service/src/main/web/src/app/type-viewer/description-editor/description-editor.component.scss
+++ b/vyne-query-service/src/main/web/src/app/type-viewer/description-editor/description-editor.component.scss
@@ -29,7 +29,7 @@
   display: flex;
   align-items: center;
   justify-content: flex-end;
-  font-size: 0.8rem;
+  font-size: 0.9rem;
   img {
     width: 1.4rem;
   }
@@ -54,4 +54,8 @@
   h4 {
     margin-bottom: 0;
   }
+}
+
+.spacer {
+  flex-grow: 1;
 }
