Add bottom bar UI for changesets.

--- a/vyne-query-service/src/main/web/src/app/vyne/vyne.component.html
+++ b/vyne-query-service/src/main/web/src/app/vyne/vyne.component.html
@@ -33,5 +33,6 @@
   </div>
   <div class="app-page-content">
     <router-outlet></router-outlet>
+    <app-draft-management-bar></app-draft-management-bar>
   </div>
 </div>
