Add the changeset selector back.

--- a/vyne-query-service/src/main/web/src/app/changeset-selector/changeset-selector.component.html
+++ b/vyne-query-service/src/main/web/src/app/changeset-selector/changeset-selector.component.html
@@ -1,11 +1,13 @@
-<mat-form-field appearance="fill" *ngIf="(availableChangesets$ | async)?.length > 0">
-  <mat-label>Draft</mat-label>
-  <mat-select [value]="value.name">
-    <mat-option
-      *ngFor="let changeset of availableChangesets$ | async"
-      (click)="selectChangeset(changeset)"
-      [value]="changeset.name">
-      {{changeset.name}}
-    </mat-option>
-  </mat-select>
-</mat-form-field>
+<ng-container *ngIf="availableChangesets$ | async as availableChangesets">
+  <mat-form-field *ngIf="value !== null" appearance="fill">
+    <mat-label>Draft</mat-label>
+    <mat-select [value]="value.name">
+      <mat-option
+        (click)="selectChangeset(changeset)"
+        *ngFor="let changeset of availableChangesets"
+        [value]="changeset.name">
+        {{changeset.name}}
+      </mat-option>
+    </mat-select>
+  </mat-form-field>
+</ng-container>
