feat(ui): added copy query button

--- a/vyne-query-service/src/main/web/src/app/query-panel/query-editor/bottom-bar.component.scss
+++ b/vyne-query-service/src/main/web/src/app/query-panel/query-editor/bottom-bar.component.scss
@@ -53,6 +53,10 @@ button {
   flex-shrink: 0;
 }
 
+.copy-menu-button {
+  margin-right: 2rem;
+}
+
 .progress {
   margin-left: 2rem;
   margin-right: 3rem;
