--- a/vyne-query-service/src/main/web/src/app/query-panel/query-editor/query-editor.component.html
+++ b/vyne-query-service/src/main/web/src/app/query-panel/query-editor/query-editor.component.html
@@ -10,6 +10,7 @@
               [error]="lastErrorMessage"
               [runningQueryStatus]="queryMetadata$ | async"
               (cancelQuery)="cancelQuery()"
+              (copyQuery)="copyQuery($event)"
             >
             </app-query-editor-bottom-bar>
           </app-panel-header>
