Fix the title for the draft modal.

--- a/vyne-query-service/src/main/web/src/app/changeset-name-dialog/changeset-name-dialog.component.html
+++ b/vyne-query-service/src/main/web/src/app/changeset-name-dialog/changeset-name-dialog.component.html
@@ -1,4 +1,4 @@
-<h2>Changeset</h2>
+<h2>New draft</h2>
 <tui-input [formControl]="nameControl">
   Specify a title for the changes you're proposing.
   <input
